longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    tailscale.com/hostname: "longhorn"
    tailscale.com/https: "true"
    tailscale.com/tags: "tag:deployment"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - longhorn.moose-amberjack.ts.net
  rules:
  - host: longhorn.moose-amberjack.ts.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
